--- a/razzeCanine/src/app/dati/dati.component.html
+++ b/razzeCanine/src/app/dati/dati.component.html
@@ -1,34 +1,101 @@
 <body>
-    <div class="bg-info bg-opacity-75 rounded sticky-top mb-3"> <!--Header-->
-        <h1 class="text-center text-primary">Razze</h1>
+    <div class="bg-success rounded sticky-top mb-3"> <!--Header-->
+        <h1 class="text-center text-warning">Razze</h1>
         <div class="d-flex justify-content-center align-self-center position-relative">
             <form>
-                <input type="image" style="height: 30px;" class="img-fluid"
+                <input type="image" style="height: 30px;" (click)="showFiltri()" class="img-fluid align-self-center"
                     src="https://cdn-icons-png.flaticon.com/512/3161/3161370.png">
                 <input [(ngModel)]="ricerca" id="search" type="text" [ngModelOptions]="{standalone: true}"
-                    class="rounded m-2" placeholder="Cerca razza">
+                    class="rounded m-2 bg-white bg-opacity-25 border border-3 border-warning text-warning"
+                    placeholder="Cerca razza">
                 <button routerLink="ricerca" (click)="letturaDeiDati()"
-                    class="mb-2 btn btn-outline-primary">Cerca</button>
+                    class="mb-2 border border-2 border-warning btn btn-outline-warning">Cerca</button>
             </form>
         </div>
+        <div>
+            <div *ngIf="filtri" class="d-flex justify-content-around pb-1 bg-white bg-opacity-25">
+                <div class="d-flex flex-column position-relative">
+                    <label class="ps-2 text-center" id="shedding">Shedding</label>
+                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <div class="d-flex justify-content-between p-0">
+                        <p class="fs-6">/</p>
+                        <p class="fs-6">1</p>
+                        <p class="fs-6">2</p>
+                        <p class="fs-6">3</p>
+                        <p class="fs-6">4</p>
+                        <p class="fs-6">5</p>
+                    </div>
+                </div>
+                <div class="d-flex flex-column">
+                    <label class="ps-2 text-center" id="barking">Barking</label>
+                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <div class="d-flex justify-content-between p-0">
+                        <p class="fs-6">/</p>
+                        <p class="fs-6">1</p>
+                        <p class="fs-6">2</p>
+                        <p class="fs-6">3</p>
+                        <p class="fs-6">4</p>
+                        <p class="fs-6">5</p>
+                    </div>
+                </div>
+                <div class="d-flex flex-column">
+                    <label class="ps-2 text-center" id="energy">Energy</label>
+                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <div class="d-flex justify-content-between p-0">
+                        <p class="fs-6">/</p>
+                        <p class="fs-6">1</p>
+                        <p class="fs-6">2</p>
+                        <p class="fs-6">3</p>
+                        <p class="fs-6">4</p>
+                        <p class="fs-6">5</p>
+                    </div>
+                </div>
+                <div class="d-flex flex-column">
+                    <label class="ps-2 text-center" id="protectiveness">Protectiveness</label>
+                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <div class="d-flex justify-content-between p-0">
+                        <p class="fs-6">/</p>
+                        <p class="fs-6">1</p>
+                        <p class="fs-6">2</p>
+                        <p class="fs-6">3</p>
+                        <p class="fs-6">4</p>
+                        <p class="fs-6">5</p>
+                    </div>
+                </div>
+                <div class="d-flex flex-column">
+                    <label class="ps-2 text-center" id="trainability">Trainability</label>
+                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <div class="d-flex justify-content-between p-0">
+                        <p class="fs-6">/</p>
+                        <p class="fs-6">1</p>
+                        <p class="fs-6">2</p>
+                        <p class="fs-6">3</p>
+                        <p class="fs-6">4</p>
+                        <p class="fs-6">5</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div *ngIf="loginCheck; else notLog">
-            <button class="mb-2 btn btn-outline-primary position-absolute top-0 end-0 m-3">{{account}}</button>
+            <button
+                class="mb-2 border border-2 border-warning btn btn-outline-warning position-absolute top-0 end-0 m-3">{{account}}</button>
         </div>
         <ng-template #notLog>
             <button routerLink="login" (click)="login()"
-                class="mb-2 btn btn-outline-primary position-absolute top-0 end-0 m-3">{{account}}</button>
+                class="mb-2 border border-2 border-warning btn btn-outline-warning position-absolute top-0 end-0 m-3">{{account}}</button>
         </ng-template>
     </div>
 
-    <p *ngIf="!datiPronti" class="d-flex justify-content-center ">{{stringa}}</p>
+    <p *ngIf="!datiPronti" class="text-success d-flex justify-content-center ">{{stringa}}</p>
 
     <div *ngIf="vettoreDati.length!=0 && datiPronti" class="w-auto container text-center">
         <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-2 d-flex">
-            <div *ngFor="let dato of vettoreDati" class="col card text-center mb-3 bg-primary bg-opacity-50">
+            <div *ngFor="let dato of vettoreDati"
+                class="col card text-center border border-3 border-success mb-3 bg-success bg-opacity-50">
                 <img [src]="dato.image_link" class="card-img-top img-fluid rounded mt-1">
                 <div class="card-body container-fluid">
                     <button routerLink="info" (click)="info(dato.name)"
-                        class="btn btn-outline-primary">{{dato.name}}</button>
+                        class="btn btn-outline-warning">{{dato.name}}</button>
                 </div>
             </div>
         </div>
