--- a/razzeCanine/src/styles.css
+++ b/razzeCanine/src/styles.css
@@ -6,3 +6,8 @@ body{
     color: #dcaa14;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.in {
+    background: transparent;
+    color: black;
+    cursor: pointer;
+}
