--- a/razzeCanine/src/app/info/info.component.html
+++ b/razzeCanine/src/app/info/info.component.html
@@ -18,7 +18,7 @@
                         <div class="row">
                             <div class="col">
                                 <div>Barking:</div>
-                                <div>{{dog.barking}}</div>
+                                <span>{{dog.barking}}</span>
                             </div>
                             <div class="col">
                                 <div>Coat length:</div>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <ng-template #notLog>
-                    <div class="container text-center border border-primary bg-primary bg-opacity-50 rounded p-5 mb-1">
+                    <div class="container text-center border border-success bg-success bg-opacity-75 rounded p-5 mb-1">
                         <h2 class="fst-italic ">Log in to see more details</h2>
                     </div>
                 </ng-template>
