--- a/razzeCanine/src/app/dati/dati.component.css
+++ b/razzeCanine/src/app/dati/dati.component.css
@@ -1,3 +1,17 @@
 #filtro{
     height: 5%;
 }
+
+input[type="range"] {
+    -webkit-appearance: none;
+    background-color: #ffc107;
+    height: 10px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border-radius: 100%;
+    background-color: #198754;
+    height: 15px;
+    width: 10px;
+}
