--- a/razzeCanine/src/app/dati/dati.component.html
+++ b/razzeCanine/src/app/dati/dati.component.html
@@ -14,9 +14,10 @@
         </div>
         <div>
             <div *ngIf="filtri" class="d-flex justify-content-around pb-1 bg-white bg-opacity-25">
-                <div class="d-flex flex-column position-relative">
+                <div class="d-flex flex-column" style="width:15%">
                     <label class="ps-2 text-center" id="shedding">Shedding</label>
-                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <!--<input class="in" type="range" name="range" ng-min="0" ng-max="1" ng-step="1" value="0">-->
+                    <input class="in" [(ngModel)]="shedding" type="range" min=0 max=5 value=0 step=1>
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
                         <p class="fs-6">1</p>
@@ -26,9 +27,9 @@
                         <p class="fs-6">5</p>
                     </div>
                 </div>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column" style="width:15%">
                     <label class="ps-2 text-center" id="barking">Barking</label>
-                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <input class="in" [(ngModel)]="barking" type="range" min="0" max="5" value="0" step="1">
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
                         <p class="fs-6">1</p>
@@ -38,9 +39,9 @@
                         <p class="fs-6">5</p>
                     </div>
                 </div>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column" style="width:15%">
                     <label class="ps-2 text-center" id="energy">Energy</label>
-                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <input class="in" [(ngModel)]="energy" type="range" min="0" max="5" value="0" step="1">
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
                         <p class="fs-6">1</p>
@@ -50,9 +51,9 @@
                         <p class="fs-6">5</p>
                     </div>
                 </div>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column" style="width:15%">
                     <label class="ps-2 text-center" id="protectiveness">Protectiveness</label>
-                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <input class="in" [(ngModel)]="protectiveness" type="range" min="0" max="5" value="0" step="1">
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
                         <p class="fs-6">1</p>
@@ -62,9 +63,9 @@
                         <p class="fs-6">5</p>
                     </div>
                 </div>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column" style="width:15%">
                     <label class="ps-2 text-center" id="trainability">Trainability</label>
-                    <input class="in" type="range" min="0" max="5" value="0" step="1">
+                    <input class="in" [(ngModel)]="trainability" type="range" min="0" max="5" value="0" step="1">
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
                         <p class="fs-6">1</p>
