--- a/razzeCanine/src/app/info/info.component.html
+++ b/razzeCanine/src/app/info/info.component.html
@@ -15,56 +15,58 @@
                                 <h1>General</h1>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col">
-                                <div>Barking:</div>
-                                <span>{{dog.barking}}</span>
+                        <div>
+                            <div class="row mb-4">
+                                <div class="col">
+                                    <div>Barking:</div>
+                                    <span>{{dog.barking}}</span>
+                                </div>
+                                <div class="col">
+                                    <div>Coat length:</div>
+                                    <div>{{dog.coat_length}}</div>
+                                </div>
+                                <div class="col">
+                                    <div>Drooling:</div>
+                                    <div>{{dog.drooling}}</div>
+                                </div>
                             </div>
-                            <div class="col">
-                                <div>Coat length:</div>
-                                <div>{{dog.coat_length}}</div>
+                            <div class="row mb-4">
+                                <div class="col">
+                                    <div>Energy:</div>
+                                    <div>{{dog.energy}}</div>
+                                </div>
+                                <div class="col">
+                                    <div>Grooming:</div>
+                                    <div>{{dog.grooming}}</div>
+                                </div>
+                                <div class="col">
+                                    <div>Playfulness:</div>
+                                    <div>{{dog.playfulness}}</div>
+                                </div>
                             </div>
-                            <div class="col">
-                                <div>Drooling:</div>
-                                <div>{{dog.drooling}}</div>
+                            <div class="row mb-4">
+                                <div class="col">
+                                    <div>Protectiveness:</div>
+                                    <div>{{dog.protectiveness}}</div>
+                                </div>
+                                <div class="col">
+                                    <div>Shedding:</div>
+                                    <div>{{dog.shedding}}</div>
+                                </div>
+                                <div class="col">
+                                    <div>Trainability:</div>
+                                    <div>{{dog.trainability}}</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <div>Energy:</div>
-                                <div>{{dog.energy}}</div>
-                            </div>
-                            <div class="col">
-                                <div>Grooming:</div>
-                                <div>{{dog.grooming}}</div>
-                            </div>
-                            <div class="col">
-                                <div>Playfulness:</div>
-                                <div>{{dog.playfulness}}</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <div>Protectiveness:</div>
-                                <div>{{dog.protectiveness}}</div>
-                            </div>
-                            <div class="col">
-                                <div>Shedding:</div>
-                                <div>{{dog.shedding}}</div>
-                            </div>
-                            <div class="col">
-                                <div>Trainability:</div>
-                                <div>{{dog.trainability}}</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <div>Min life expectancy:</div>
-                                <div>{{dog.min_life_expectancy}} years</div>
-                            </div>
-                            <div class="col">
-                                <div>Max life expectancy:</div>
-                                <div>{{dog.max_life_expectancy}} years</div>
+                            <div class="row mb-4">
+                                <div class="col">
+                                    <div>Min life expectancy:</div>
+                                    <div>{{dog.min_life_expectancy}} years</div>
+                                </div>
+                                <div class="col">
+                                    <div>Max life expectancy:</div>
+                                    <div>{{dog.max_life_expectancy}} years</div>
+                                </div>
                             </div>
                         </div>
                     </div>
