aggiunta mini animazione, stelline e "addobbi"

--- a/razzeCanine/src/app/info/info.component.html
+++ b/razzeCanine/src/app/info/info.component.html
@@ -16,56 +16,56 @@
                             </div>
                         </div>
                         <div>
-                            <div class="row mb-4">
+                            <div class="row mb-3">
                                 <div class="col">
-                                    <div>Barking:</div>
-                                    <span>{{dog.barking}}</span>
+                                    <h5>Barking:</h5>
+                                    <h4 class="zoom">{{dog.barking}}</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Coat length:</div>
-                                    <div>{{dog.coat_length}}</div>
+                                    <h5>Coat length:</h5>
+                                    <h4 class="zoom">{{dog.coat_length}}</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Drooling:</div>
-                                    <div>{{dog.drooling}}</div>
-                                </div>
-                            </div>
-                            <div class="row mb-4">
-                                <div class="col">
-                                    <div>Energy:</div>
-                                    <div>{{dog.energy}}</div>
-                                </div>
-                                <div class="col">
-                                    <div>Grooming:</div>
-                                    <div>{{dog.grooming}}</div>
-                                </div>
-                                <div class="col">
-                                    <div>Playfulness:</div>
-                                    <div>{{dog.playfulness}}</div>
+                                    <h5>Drooling:</h5>
+                                    <h4 class="zoom">{{dog.drooling}}</h4>
                                 </div>
                             </div>
-                            <div class="row mb-4">
+                            <div class="row mb-3">
                                 <div class="col">
-                                    <div>Protectiveness:</div>
-                                    <div>{{dog.protectiveness}}</div>
+                                    <h5>Energy:</h5>
+                                    <h4 class="zoom">{{dog.energy}}</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Shedding:</div>
-                                    <div>{{dog.shedding}}</div>
+                                    <h5>Grooming:</h5>
+                                    <h4 class="zoom">{{dog.grooming}}</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Trainability:</div>
-                                    <div>{{dog.trainability}}</div>
+                                    <h5>Playfulness:</h5>
+                                    <h4 class="zoom">{{dog.playfulness}}</h4>
                                 </div>
                             </div>
-                            <div class="row mb-4">
+                            <div class="row mb-3">
                                 <div class="col">
-                                    <div>Min life expectancy:</div>
-                                    <div>{{dog.min_life_expectancy}} years</div>
+                                    <h5>Protectiveness:</h5>
+                                    <h4 class="zoom">{{dog.protectiveness}}</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Max life expectancy:</div>
-                                    <div>{{dog.max_life_expectancy}} years</div>
+                                    <h5>Shedding:</h5>
+                                    <h4 class="zoom">{{dog.shedding}}</h4>
+                                </div>
+                                <div class="col">
+                                    <h5>Trainability:</h5>
+                                    <h4 class="zoom">{{dog.trainability}}</h4>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col">
+                                    <h5>Min life expectancy:</h5>
+                                    <h4 class="zoom">{{dog.min_life_expectancy}} years</h4>
+                                </div>
+                                <div class="col">
+                                    <h5>Max life expectancy:</h5>
+                                    <h4 class="zoom">{{dog.max_life_expectancy}} years</h4>
                                 </div>
                             </div>
                         </div>
@@ -79,18 +79,18 @@
                                     <h1>Goodness</h1>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col">
-                                    <div>Good with children:</div>
-                                    <div>{{dog.good_with_children}}</div>
+                            <div class="row justify-content-between mb-2">
+                                <div class="col-3">
+                                    <h5>Good with children:</h5>
+                                    <h4 class="zoom">{{dog.good_with_children}}</h4>
                                 </div>
-                                <div class="col">
-                                    <div>Good with other dogs:</div>
-                                    <div>{{dog.good_with_other_dogs}}</div>
+                                <div class="col-4">
+                                    <h5>Good with other dogs:</h5>
+                                    <h4 class="zoom">{{dog.good_with_other_dogs}}</h4>
                                 </div>
-                                <div class="col">
-                                    <div>Good with strangers:</div>
-                                    <div>{{dog.good_with_strangers}}</div>
+                                <div class="col-3">
+                                    <h5>Good with strangers:</h5>
+                                    <h4 class="zoom">{{dog.good_with_strangers}}</h4>
                                 </div>
                             </div>
                         </div>
@@ -103,24 +103,24 @@
                                     <h1>Weight</h1>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mb-2">
                                 <div class="col">
-                                    <div>Min heigth male:</div>
-                                    <div>{{dog.min_weight_male}} pound</div>
+                                    <h5>Min weight male ♂:</h5>
+                                    <h4 class="zoom">{{dog.min_weight_male}} pound</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Max heigth male:</div>
-                                    <div>{{dog.max_weight_male}} pound</div>
+                                    <h5>Max weight male ♂:</h5>
+                                    <h4 class="zoom">{{dog.max_weight_male}} pound</h4>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mb-2">
                                 <div class="col">
-                                    <div>Min heigth female:</div>
-                                    <div>{{dog.min_weight_female}} pound</div>
+                                    <h5>Min weight female ♀:</h5>
+                                    <h4 class="zoom">{{dog.min_weight_female}} pound</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Max heigth female:</div>
-                                    <div>{{dog.max_weight_female}} pound</div>
+                                    <div>Max weight female ♀:</div>
+                                    <h4 class="zoom">{{dog.max_weight_female}} pound</h4>
                                 </div>
                             </div>
                         </div>
@@ -131,24 +131,24 @@
                                     <h1>Height</h1>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mb-2">
                                 <div class="col">
-                                    <div>Min height male:</div>
-                                    <div>{{dog.min_height_male}} inches</div>
+                                    <h5>Min height male ♂:</h5>
+                                    <h4 class="zoom">{{dog.min_height_male}} inches</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Max height male:</div>
-                                    <div>{{dog.max_height_male}} inches</div>
+                                    <h5>Max height male ♂:</h5>
+                                    <h4 class="zoom">{{dog.max_height_male}} inches</h4>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mb-2">
                                 <div class="col">
-                                    <div>Min height female</div>
-                                    <div>{{dog.min_height_female}} inches</div>
+                                    <h5>Min height female ♀:</h5>
+                                    <h4 class="zoom">{{dog.min_height_female}} inches</h4>
                                 </div>
                                 <div class="col">
-                                    <div>Max height female:</div>
-                                    <div>{{dog.max_height_female}} inches</div>
+                                    <h5>Max height female ♀:</h5>
+                                    <h4 class="zoom">{{dog.max_height_female}} inches</h4>
                                 </div>
                             </div>
                         </div>
