--- a/razzeCanine/src/app/dati/dati.component.html
+++ b/razzeCanine/src/app/dati/dati.component.html
@@ -13,9 +13,9 @@
             </form>
         </div>
         <div>
-            <div *ngIf="filtri" class="d-flex justify-content-around pb-1 bg-white bg-opacity-25">
+            <div *ngIf="filtri" class="comparsa d-flex justify-content-around pb-1 bg-white bg-opacity-25">
                 <div class="d-flex flex-column" style="width:15%">
-                    <label class="ps-2 text-center" id="shedding">Shedding</label>
+                    <label class="ps-2 mb-2 text-center" id="shedding">Shedding</label>
                     <!--<input class="in" type="range" name="range" ng-min="0" ng-max="1" ng-step="1" value="0">-->
                     <input class="in" [(ngModel)]="shedding" type="range" min=0 max=5 value=0 step=1>
                     <div class="d-flex justify-content-between p-0">
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column" style="width:15%">
-                    <label class="ps-2 text-center" id="barking">Barking</label>
+                    <label class="ps-2 m-2 text-center" id="barking">Barking</label>
                     <input class="in" [(ngModel)]="barking" type="range" min="0" max="5" value="0" step="1">
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column" style="width:15%">
-                    <label class="ps-2 text-center" id="energy">Energy</label>
+                    <label class="ps-2 m-2 text-center" id="energy">Energy</label>
                     <input class="in" [(ngModel)]="energy" type="range" min="0" max="5" value="0" step="1">
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column" style="width:15%">
-                    <label class="ps-2 text-center" id="protectiveness">Protectiveness</label>
+                    <label class="ps-2 m-2 text-center" id="protectiveness">Protectiveness</label>
                     <input class="in" [(ngModel)]="protectiveness" type="range" min="0" max="5" value="0" step="1">
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column" style="width:15%">
-                    <label class="ps-2 text-center" id="trainability">Trainability</label>
+                    <label class="ps-2 m-2 text-center" id="trainability">Trainability</label>
                     <input class="in" [(ngModel)]="trainability" type="range" min="0" max="5" value="0" step="1">
                     <div class="d-flex justify-content-between p-0">
                         <p class="fs-6">/</p>
